# overhead-aware-slam

./: .gitignore  README.md  results_house2.csv  results_house3.csv
maps/: augmented_map.pgm  augmented_map.yaml  augmented_map_2.pgm  augmented_map_2.yaml  gt_map2_v1.pgm  gt_map2_v1.yaml  gt_map_v1.pgm  gt_map_v1.yaml  lidar_map2_v1.pgm  lidar_map2_v1.yaml  lidar_map_v1.pgm  lidar_map_v1.yaml  rtab_map1_v1.pgm  rtab_map1_v1.yaml  rtab_map2_v1.pgm  rtab_map2_v1.yaml
src/sensor_fusion_desc/: CMakeLists.txt  package.xml
src/sensor_fusion_desc/config/: eval_goals_house2.yaml  eval_goals_house3.yaml  nav2.rviz  nav2_params.yaml  object_location.yaml  rtabmap_3d_lidar.yaml  rviz2.rviz  rviz_lidar3d.rviz  slam_toolbox.yaml  slam_toolbox_3d_lidar.yaml
src/sensor_fusion_desc/launch/: env.launch.py
src/sensor_fusion_desc/models/Dining Chair/: model.sdf
src/sensor_fusion_desc/worlds/: house.world  house2.world  house3.world
src/sensor_fusion_msgs/: CMakeLists.txt  package.xml
src/sensor_fusion_msgs/msg/: Detection.msg
src/sensor_fusion_nodes/: package.xml  setup.cfg  setup.py
src/sensor_fusion_nodes/models/: labelmap1.txt
src/sensor_fusion_nodes/sensor_fusion_nodes/: capture_session.py  gz_lidar3d_to_pointcloud.py  map_filler.py  nav_evaluator.py  object_detction2.py  object_detection.py  object_location.py  occupancy_map.py  odom_tf.py  pointcloud_occupancy.py  rgbd_cam_view.py  save_map.py  scan_fuser.py  teleop_snapshot.py  yolo_detection.py
src/sensor_fusion_run/: package.xml  setup.cfg  setup.py
src/sensor_fusion_run/launch/: capture_world.launch.py  depthcam.launch.py  lidar3d_rtabmap.launch.py  lidar3d_slam.launch.py  nav2_static_map.launch.py  save_map.launch.py  test.launch.py
tools/: analyse_eval.py  generate_gt_occupancy.py  record_waypoints.py
(+53 files in other folders)
